# text2image

./: README.md
backend/: .env  .gitignore  db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/text2image/: urls.py  views.py
backend/text2image/static/css/: style.css
backend/text2image/static/js/: main.js
backend/text2image/templates/: index.html
